Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-102197

Coverity analysis defect 172150: Parse warning

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Networking & Observability
    • Fully Compatible
    • ALL
    • N&O 2025-03-31
    • 200
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      Parse warning

      A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
      /data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/db/ftdc/collector.cpp:221: PW.PARAMETER_HIDDEN 172150 declaration hides parameter "opCtx" (declared at line 195)

            Assignee:
            joseph.prince@mongodb.com Joseph Prince
            Reporter:
            xgen-internal-coverity Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: