SERVER-102197 Update name for collection OperationContext (#34039)

GitOrigin-RevId: f3165fc255b6a17b6c2325a3ad88cffd43029dd7